# aio-taginfo

./: CHANGELOG.md  README.md  RELEASES.md  pyproject.toml  tasks.py
.github/codeql/: codeql-config.yml
.github/workflows/: manual_publish_docs.yml  push_tag_publish.yml  push_test.yml  sched_integration_test.yml  test_and_publish.yml  test_deps_matrix.yml
aio_taginfo/: __init__.py  error.py
aio_taginfo/api/v4/: __init__.py  _internal.py  languages.py
aio_taginfo/api/v4/key/: __init__.py  chronology.py  combinations.py  overview.py  prevalent_values.py  projects.py  similar.py  stats.py  values.py  wiki_pages.py
aio_taginfo/api/v4/key/distribution/: __init__.py  nodes.py  ways.py
aio_taginfo/api/v4/keys/: __init__.py  all.py  similar.py  wiki_pages.py  without_wiki_page.py
aio_taginfo/api/v4/project/: __init__.py  icon.py  tags.py
aio_taginfo/api/v4/projects/: __init__.py  all.py  keys.py  tags.py
aio_taginfo/api/v4/relation/: __init__.py  projects.py  roles.py  stats.py  wiki_pages.py
aio_taginfo/api/v4/relations/: __init__.py  all.py
aio_taginfo/api/v4/search/: __init__.py  by_key_and_value.py  by_keyword.py  by_role.py  by_value.py
aio_taginfo/api/v4/site/: __init__.py  info.py  sources.py
aio_taginfo/api/v4/site/config/: __init__.py  geodistribution.py
aio_taginfo/api/v4/tag/: __init__.py  chronology.py  combinations.py  overview.py  projects.py  stats.py  wiki_pages.py
aio_taginfo/api/v4/tag/distribution/: __init__.py  nodes.py  ways.py
aio_taginfo/api/v4/tags/: __init__.py  list.py  popular.py
aio_taginfo/api/v4/unicode/: __init__.py  characters.py
aio_taginfo/api/v4/wiki/: __init__.py  languages.py
aio_taginfo/api/v4/wikidata/: __init__.py  all.py  errors.py
tests/v4/: integration.py  test_annotations.py  test_calls.py  test_mappings.py
tests/v4/responses/: README.md  key_chronology_highway.json  key_combinations_highway.json  key_combinations_highway2.json  key_overview_amenity.json  key_overview_empty.json  key_overview_nonexistent.json  key_overview_unset.json  key_prevalent_values_highway.json  key_projects_highway.json  key_similar_highway.json  key_stats_amenity.json  key_values_highway.json  key_wiki_pages_highway.json  keys_all.json  keys_similar.json  keys_wiki_pages.json  keys_without_wiki_page.json  languages.json  project_tags_id_editor.json  projects_all.json  projects_keys.json  projects_tags.json  relation_projects_route.json  relation_roles_multipolygon.json  relation_stats_multipolygon.json  relation_wiki_pages_multipolygon.json  relations_all.json  search_by_key_and_value_highway_residential.json  search_by_keyword_fire.json  search_by_role_foo.json  search_by_value_foo.json  site_config_geodistribution.json  site_info.json  site_sources.json  tag_chronology_highway_primary.json  tag_combinations_highway_residential.json  tag_overview_amenity_restaurant.json  tag_projects_highway_residential.json  tag_stats_amenity_school.json  (+6 more)
